--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -48,8 +48,8 @@ function submitFilter() {
       <% end %>
     </span>
 
-    <a href="/featured/new-stuff" class="faves-script">
-      What's New
+    <a href="/featured/new-stuff">
+      <%= image_tag "Whats_New.png", :width => 73, :height => 22, :class => "faves-script" %>
     </a>
 
     <div id="filter-section" class="filter-section">	
