Fixing Image Size in Detail

--- a/app/assets/stylesheets/jess.css
+++ b/app/assets/stylesheets/jess.css
@@ -891,7 +891,7 @@ width: 62px;
 }
 
 #mc_wrap .more-views ul li:hover {
-	border: 1px solid #409AD4;
+	border: 1px solid #432060;
     background: none;
 }
 
