--- a/app/views/purchases/index.html.erb
+++ b/app/views/purchases/index.html.erb
@@ -48,7 +48,7 @@ body {
         <div class="row-fluid">
           <% if purchase.sale %>
           <div class="span2">
-            <% [:image_0, :image_1, :image_2].each do |image_sym|
+            <% [:image_0, :image_1, :image_2, :image_3, :image_4, :image_5, :image_6, :image_7].each do |image_sym|
                 if (img = purchase.sale.send(image_sym)) and not img.versions[:web_thumbnail].to_s.empty? 
                   img_version = :web_modal
                 %>
